--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -1,5 +1,10 @@
 version: "3"
-services:
+
+volumes:
+    config:
+    transcode:
+
+services:  
   plex:
     image: linuxserver/plex
     container_name: plex
@@ -19,9 +24,9 @@ services:
       - 32413:32413/udp
       - 32414:32414/udp
     volumes:
-      - ./config:/config
-      - /media/cola/Data/Music:/music
+      - config:/config
+      - ./music:/music
 #      - <path/to/tvseries>:/data/tvshows
 #      - </path/to/movies>:/data/movies
-      - ./transcode:/transcode
+      - transcode:/transcode
     restart: unless-stopped
