new Dockerfile 4 UbuntunoVNC

--- a/UbuntuDevTemplate/Dockerfile
+++ b/UbuntuDevTemplate/Dockerfile
@@ -5,14 +5,18 @@ FROM dorowu/ubuntu-desktop-lxde-vnc
 	# RUN add-apt-repository ppa:webupd8team/sublime-text-3
 	RUN apt-get update 
 	RUN apt-get upgrade -y 
-	RUN apt-get install -y snapd mc git curl zsh build-essential ubuntu-restricted-extras chromium-browser fonts-font-awesome fonts-powerline vim openjdk-11-jdk
+	RUN apt-get install -y snapd mc git curl fish build-essential ubuntu-restricted-extras chromium-browser fonts-font-awesome fonts-powerline vim openjdk-11-jdksudo apt install snapd snapd-xdg-open
 
-## OhMyZSH ##
-	RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
-	COPY ./.zshrc /root/.zshrc
+	RUN snap install pycharm-professional --classic
+
+
+## Dots ##
+	RUN git pull http://github.com/colla69/Dots.git
+	RUN git pull http://github.com/colla69/CVHost.git
+
 
 ## IDE ##
 	RUN mkdir /opt/intellij-idea-ultimate/
 	COPY idea/ /opt/intellij-idea-ultimate/current/
-	COPY intellij-idea-ultimate_intellij-idea-ultimate.sh /root/Desktop/intellij-idea-ultimate_intellij-idea-ultimate.sh
+	# COPY intellij-idea-ultimate_intellij-idea-ultimate.sh /root/Desktop/intellij-idea-ultimate_intellij-idea-ultimate.sh
 	
